# sphinx-test-reports

./: .flake8  .gitignore  .pre-commit-config.yaml  .readthedocs.yaml  .travis.yml  AUTHORS  CONTRIBUTING.md  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  SUBTREE.md  conf.py  doc-requirements.txt  mypy.ini  noxfile.py  pyproject.toml  setup.py  test-requirements.txt  tox.ini
.github/: baumpfleger.yml
.github/workflows/: ci.yaml  coverage.yaml  release.yaml
docs/: Makefile  changelog.rst  conf.py  configuration.rst  examples.rst  filter.rst  functions.rst  index.rst  install.rst  make.bat  parsers.rst  support.rst
docs/_static/: custom.js
docs/directives/: index.rst  test_case.rst  test_env.rst  test_file.rst  test_report.rst  test_results.rst  test_suite.rst
docs/examples/: casperjs.rst  index.rst  pytest.rst
docs/source/: conf.py
docs/ub_theme/: README.md  SUBTREE.md  conf.py
docs/ub_theme/css/: ub-theme.css
docs/ub_theme/js/: ub-theme.js
docs/ub_theme/templates/partials/: copyright.html
sphinxcontrib/: __init__.py
sphinxcontrib/test_reports/: __init__.py  config.py  environment.py  exceptions.py  jsonparser.py  junitparser.py  test_reports.py
sphinxcontrib/test_reports/css/: common.css
sphinxcontrib/test_reports/directives/: __init__.py  test_case.py  test_common.py  test_env.py  test_file.py  test_report.py  test_report_template.txt  test_results.py  test_suite.py
sphinxcontrib/test_reports/functions/: __init__.py
sphinxcontrib/test_reports/needs/: dyn_functions.py
sphinxcontrib/test_reports/schemas/: JUnit.xsd
tests/: conftest.py  test_basic_doc.py  test_custom_template.py  test_custom_types.py  test_dummy.py  test_empty_doc.py  test_env.py  test_json_parser.py  test_junit_parser.py  test_needs_dyn_func.py  test_needs_linking.py  test_properties.py  test_schema_validation.py  test_suites.py  test_test_ctest_file.py  test_test_file.py  test_tr_link.py
tests/data/: casperjs.xml  pytest_data_5_1.xml  pytest_nested_example.xml  pytest_sphinx_data.xml  tox-report.json
tests/doc_test/basic_doc/: conf.py  index.rst
tests/doc_test/custom_tr_koi8_template/: conf.py  custom_test_report_template.txt  index.rst
tests/doc_test/custom_tr_template/: conf.py  custom_test_report_template.txt  index.rst
tests/doc_test/custom_tr_utf8_template/: Makefile  conf.py  custom_test_report_template.txt  index.rst
tests/doc_test/custom_types/: conf.py  index.rst
tests/doc_test/doc_test_ctest_file/: conf.py  index.rst
tests/doc_test/doc_test_file/: conf.py  index.rst
tests/doc_test/empty_doc/: index.rst
tests/doc_test/env_report_doc/: conf.py  index.rst
tests/doc_test/env_report_doc_default/: conf.py  index.rst
tests/doc_test/env_report_doc_raw/: conf.py  index.rst
tests/doc_test/env_report_warnings/: conf.py  index.rst
tests/doc_test/json_parser/: conf.py  index.rst
tests/doc_test/json_parser_complex/: conf.py  index.rst
tests/doc_test/json_parser_custom/: conf.py  index.rst
tests/doc_test/many_testsuites_doc/: conf.py  index.rst
tests/doc_test/needs_dyn_function_doc/: conf.py  index.rst
tests/doc_test/needs_linking/: conf.py  index.rst
tests/doc_test/needs_linking/subfolder/: file_1.rst
tests/doc_test/properties_linking/: conf.py  index.rst
tests/doc_test/pytest_6_2/: conf.py  index.rst
tests/doc_test/schema_strictness/: conf.py  index.rst  schemas.json
tests/doc_test/schema_strictness_status/: conf.py  index.rst  schemas.json
tests/doc_test/testsuites_doc/: conf.py  index.rst
tests/doc_test/utils/: ctest.xml  json_complex_data.json  json_custom_data.json  json_data.json  many_testsuites.xml  nose_data.xml  pytest_data.xml  pytest_data_6_2.xml  pytest_nested_example.xml  pytest_sphinx_data_short.xml  testsuites.xml  tox-report-short.json  tox-report.json  xml_data.xml  xml_data_2.xml  xml_data_empty_properties.xml  xml_data_error.xml  xml_data_properties.xml
